# worms-assets

./: .gitattributes  CMakeLists.txt  README.md  package.xml
Meshes/GLTF/: hexapod-pallet.gltf  link-0.gltf  link-2.gltf  rubber-foot.gltf  turtle-pallet.gltf
URDF/: turtle.urdf
URDFs/: pony-worm.urdf
XACRO/: 3dof-worm.urdf.xacro  hexapod.urdf.xacro  species.macro.xacro  turtle.urdf.xacro
XACRO/MACRO/: 3dof-worm.macro.xacro  pallets.macro.xacro  species.macro.xacro
meshes/gltf/: link-1.gltf  link-3.gltf
urdf/: hexapod.urdf  pony-worm.urdf  turtle.urdf
xacro/: 3dof-worm.urdf.xacro  hexapod.urdf.xacro  turtle.urdf.xacro
xacro/macros/: 3dof-worm.macro.xacro  pallets.macro.xacro  species.macro.xacro
