<?xml version="1.0"?>
<package format="3">
  <name>worms_assets</name>
  <version>0.1.0</version>

  <description>Robot descriptions and meshes for the Worms project.</description>

  <maintainer email="worms@mit.edu">Worms</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>